# MSPByteV3

./: .gitignore  .prettierrc  README.md  package.json  query_jobs_migration_seed.sql  task_adhoc_migration.sql  task_automation.sql  task_automation_seed.sql  turbo.json
apps/agent/: README.md  about.html  components.json  index.html  package.json  tsconfig.json  vite.config.ts
apps/agent/src/: About.tsx  Support.tsx  main.tsx  main_about.tsx
apps/agent/src-tauri/: Cargo.toml  tauri.conf.json
apps/agent/src-tauri/capabilities/: default.json
apps/agent/src-tauri/icons/: icon.icns
apps/agent/src-tauri/nsis/: install-hooks.nsh
apps/agent/src-tauri/src/: device_manager.rs  device_registration.rs  heartbeat.rs  lib.rs  logger.rs
apps/developer/: .env.example  package.json
apps/frontend/: .env.example  README.md  package.json  svelte.config.js
apps/frontend/src/: app.d.ts  hooks.server.ts
apps/web/: .env.example  .prettierrc  README.md  package.json  svelte.config.js
apps/web/src/: app.d.ts  hooks.server.ts
backend/: docker-compose.yml
backend/agents/: .env.example  README.md  package.json  tsconfig.build.json  tsconfig.json
backend/agents/src/: app.ts
backend/compliance/: package.json
backend/compliance/src/: index.ts  queues.ts  redis.ts
backend/ingestor/: .env.example  package.json
backend/ingestor/src/: cron.ts  index.ts  interfaces.ts  queues.ts  registry.ts  supabase.ts  types.ts
backend/pipeline/: .env.example  package.json  tsconfig.json  vitest.config.ts
backend/workflows/: package.json  tsconfig.json
docs/: ARCHITECTURE.md
(+694 files in other folders)
