[package]
name = "MSPAgent"
version = "0.1.15"
description = "A Tauri App"
authors = ["you"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "agent_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-opener = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
tauri-plugin-store = "2"
hostname = "0.4.1"
tokio = "1.47.1"
reqwest = { version = "0.12.23", features = ["json", "multipart"] }
chrono = "0.4.42"
tauri-plugin-screenshots = "2.2.0"
tauri-plugin-dialog = "2"
tauri-plugin-fs = "2"
base64 = "0.22.1"
tauri-plugin-notification = "2"
tauri-plugin-http = "2"
local-ip-address = "0.6.5"
rand = "0.8"
whoami = "1.6.1"


[target.'cfg(windows)'.dependencies]
winreg = "0.55.0"
